; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcclibs/libgomp/extr_sections.c_GOMP_parallel_sections_start.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcclibs/libgomp/extr_sections.c_GOMP_parallel_sections_start.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gomp_work_share = type { i32 }

@gomp_dyn_var = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @GOMP_parallel_sections_start(void (i8*)* %0, i8* %1, i32 %2, i32 %3) #0 {
  %5 = alloca void (i8*)*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca %struct.gomp_work_share*, align 8
  store void (i8*)* %0, void (i8*)** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %10 = load i32, i32* %7, align 4
  %11 = call i32 @gomp_resolve_num_threads(i32 %10)
  store i32 %11, i32* %7, align 4
  %12 = load i64, i64* @gomp_dyn_var, align 8
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %20

14:                                               ; preds = %4
  %15 = load i32, i32* %7, align 4
  %16 = load i32, i32* %8, align 4
  %17 = icmp ugt i32 %15, %16
  br i1 %17, label %18, label %20

18:                                               ; preds = %14
  %19 = load i32, i32* %8, align 4
  store i32 %19, i32* %7, align 4
  br label %20

20:                                               ; preds = %18, %14, %4
  %21 = load i32, i32* %7, align 4
  %22 = call %struct.gomp_work_share* @gomp_new_work_share(i32 0, i32 %21)
  store %struct.gomp_work_share* %22, %struct.gomp_work_share** %9, align 8
  %23 = load %struct.gomp_work_share*, %struct.gomp_work_share** %9, align 8
  %24 = load i32, i32* %8, align 4
  %25 = call i32 @gomp_sections_init(%struct.gomp_work_share* %23, i32 %24)
  %26 = load void (i8*)*, void (i8*)** %5, align 8
  %27 = load i8*, i8** %6, align 8
  %28 = load i32, i32* %7, align 4
  %29 = load %struct.gomp_work_share*, %struct.gomp_work_share** %9, align 8
  %30 = call i32 @gomp_team_start(void (i8*)* %26, i8* %27, i32 %28, %struct.gomp_work_share* %29)
  ret void
}

declare dso_local i32 @gomp_resolve_num_threads(i32) #1

declare dso_local %struct.gomp_work_share* @gomp_new_work_share(i32, i32) #1

declare dso_local i32 @gomp_sections_init(%struct.gomp_work_share*, i32) #1

declare dso_local i32 @gomp_team_start(void (i8*)*, i8*, i32, %struct.gomp_work_share*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
